feat(rv): selective element replacement
Signed-off-by: SettingDust <settingdust@gmail.com>