@@ -244,6 +244,7 @@ public class BlockPredicateExtensions {
 		}
 	}
 
+	@SuppressWarnings({"rawtypes", "unchecked"})
 	public static List<BlockState> getShowcaseBlockStates(
 			BlockPredicate predicate,
 			Collection<Property<?>> iterableProperties
@@ -265,7 +266,7 @@ public class BlockPredicateExtensions {
 					for (Comparable<?> object : property.getPossibleValues()) {
 						if (matcher.get().match(
 								block.getStateDefinition(),
-								state.setValue((Property) property, (Comparable) object)
+								state.trySetValue((Property) property, (Comparable) object)
 						)) {
 							propertyMap.put(property, object);
 						}
@@ -279,7 +280,7 @@ public class BlockPredicateExtensions {
 				stream = stream.flatMap(
 						$ -> e.getValue()
 								.stream()
-								.map(v -> $.setValue((Property) e.getKey(), (Comparable) v))
+								.map(v -> $.trySetValue((Property) e.getKey(), (Comparable) v))
 				);
 			}
 
@@ -288,30 +289,37 @@ public class BlockPredicateExtensions {
 		return states;
 	}
 
-	@SuppressWarnings("rawtypes")
-	public static List<Component> getTooltips(BlockState state, BlockPredicate predicate) {
-		if (isAny(predicate)) {
+	@SuppressWarnings({"rawtypes", "unchecked"})
+	public static List<Component> getTooltips(BlockState blockState, BlockPredicate predicate) {
+		if (blockState.isAir()) {
 			return List.of();
 		}
-		final var list = Lists.<Component>newArrayList(state.getBlock().getName());
+		final var list = Lists.<Component>newArrayList(blockState.getBlock().getName());
+		if (isAny(predicate)) {
+			return list;
+		}
 		final var matchers = predicate.properties().map(StatePropertiesPredicate::properties);
 		if (matchers.isPresent()) {
 			for (final var matcher : matchers.get()) {
 				final var name = Component.literal(matcher.name() + "=").withStyle(ChatFormatting.GRAY);
-				if (matcher.valueMatcher() instanceof StatePropertiesPredicate.ExactMatcher exactMatcher) {
-					name.append(Component.literal(exactMatcher.value()).withStyle(ChatFormatting.WHITE));
-				} else if (matcher.valueMatcher() instanceof StatePropertiesPredicate.RangedMatcher rangedMatcher) {
-					final var definition = state.getBlock().getStateDefinition();
+				if (matcher.valueMatcher() instanceof StatePropertiesPredicate.ExactMatcher(String value)) {
+					name.append(Component.literal(value).withStyle(ChatFormatting.WHITE));
+				} else if (matcher.valueMatcher() instanceof StatePropertiesPredicate.RangedMatcher(
+						Optional<String> minValue, Optional<String> maxValue)) {
+					final var definition = blockState.getBlock().getStateDefinition();
 					final Property property = definition.getProperty(matcher.name());
+					if (property == null) {
+						continue;
+					}
 					final var rangePair = Suppliers.memoize(() -> {
 						final var sorted = property.getPossibleValues()
 								.stream()
 								.sorted()
 								.toList();
-						return Pair.of(sorted.get(0), sorted.get(sorted.size() - 1));
+						return Pair.of(sorted.getFirst(), sorted.getLast());
 					});
-					var min = rangedMatcher.minValue().orElseGet(() -> property.getName((Comparable) rangePair.get().getFirst()));
-					var max = rangedMatcher.maxValue().orElseGet(() -> property.getName((Comparable) rangePair.get().getSecond()));
+					var min = minValue.orElseGet(() -> property.getName((Comparable) rangePair.get().getFirst()));
+					var max = maxValue.orElseGet(() -> property.getName((Comparable) rangePair.get().getSecond()));
 					name.append(Component.literal(min).withStyle(ChatFormatting.WHITE));
 					if (!min.equals(max)) {
 						name.append(Component.literal("~").withStyle(ChatFormatting.GRAY));
